--- a/CMPE-138-Master/styles/css/login.css
+++ b/CMPE-138-Master/styles/css/login.css
@@ -6,17 +6,17 @@
   	-moz-osx-font-smoothing: grayscale;
 }
 body {
-  	background-color: #435165;
+  	background-color: #6dcab7;
 }
 .login {
   	width: 400px;
-  	background-color: #ffffff;
+  	background-color: #d5f9de;
   	box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.3);
   	margin: 100px auto;
 }
 .login h1 {
   	text-align: center;
-  	color: #5b6574;
+  	color: #011502;
   	font-size: 24px;
   	padding: 20px 0 20px 0;
   	border-bottom: 1px solid #dee0e4;
@@ -33,21 +33,22 @@ body {
   	align-items: center;
   	width: 50px;
   	height: 50px;
-  	background-color: #3274d6;
+  	background-color: #049a8f;
   	color: #ffffff;
 }
 .login form input[type="password"], .login form input[type="text"] {
   	width: 310px;
   	height: 50px;
-  	border: 1px solid #dee0e4;
+	border: 1px solid #dee0e4;
+	background-color: #b3e8dd;
   	margin-bottom: 20px;
   	padding: 0 15px;
 }
 .login form input[type="submit"] {
   	width: 100%;
   	padding: 15px;
- 	  margin-top: 20px;
-  	background-color: #3274d6;
+ 	margin-top: 20px;
+  	background-color: #049a8f;
   	border: 0;
   	cursor: pointer;
   	font-weight: bold;
@@ -55,6 +56,6 @@ body {
   	transition: background-color 0.2s;
 }
 .login form input[type="submit"]:hover {
-	background-color: #2868c7;
+	background-color: #046654;
   	transition: background-color 0.2s;
 }
