--- a/CMPE-138-Master/styles/css/login.css
+++ b/CMPE-138-Master/styles/css/login.css
@@ -1,3 +1,4 @@
+/* SJSU CMPE 138 Fall 2020 TEAM8 */
 * {
   	box-sizing: border-box;
   	font-family: -apple-system, BlinkMacSystemFont, "segoe ui", roboto, oxygen, ubuntu, cantarell, "fira sans", "droid sans", "helvetica neue", Arial, sans-serif;
